2017-04-24  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* synctex-ep-mem.ch0, synctex-p-mem.ch0,
	synctex-ep-mem.ch1, synctex-p-mem.ch1:
	Adapt to changes in ptexdir/ptex-base.ch (p\TeX -> \pTeX).

2017-04-22 Jerome Laurens
    <jerome.laurens@u-bourgogne.fr>

    * man5/synctex.1, man5/synctex.5, synctex-pdf-rec.ch2, synctex-pdftex.h, synctex-rec.ch0, synctex.c, synctex.defines, synctex.h: add support for \pdfxform

2016-03-04  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* synctex-ep-mem.ch1, synctex-p-mem.ch1: Adapt to changes in
	ptexdir/ptex-base.ch.

2015-12-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex-luatex.h: update for the new texnode.h in LuaTeX beta-0.87.0.

2015-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am: Dependencies for 'make check'.

2015-04-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex.c: Support file names with multi-byte characters in SyncTeX
	for XeTeX in addition to for (e)upTeX (win32 only).

2015-03-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am [MinGW]: SyncTeX requires libshlwapi.a.
	* synctex_parser_utils.c: Avoid an unused variable.

2015-03-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex_parser_utils.c: Fix a bug in
	synctex_bool_t synctex_ignore_leading_dot_slash_in_path().
	From Noriyuki Abe (2015-03-23).

2015-03-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex_parser_utils.c: Use WIN32API PathFindFileName() and
	PathFindExtension() for last_component and last_extension, respectively,
	in _synctex_strip_last_path_extension(), in order to support multi-byte
	characters in SyncTeX applications (win32 only).
	From Noriyuki Abe (2015-03-22).

2015-03-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex.c: Avoid minor memory leaks (win32 only).

2015-03-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex.c: Support multi-byte characters in file names in SyncTeX
	for (e)upTeX (win32 only).

2015-03-08  Peter Breitenlohner  <peb@mppmu.mpg.de>
